fix #435 login box size on small screens

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -405,6 +405,10 @@ body {
                     background-color: rgba(193, 224, 244, 0.7);
                     border-radius: 0;
 
+                    @media (max-width: 420px) {
+                        width: 310px;
+                    }
+
                     form {
                         overflow: hidden;
                     }
